scroll fix on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,10 @@ html {
   }
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 *,
 *:before,
 *:after {
